# calculation-average-numbers

./: README.md  app.py  entrada.csv  pyproject.toml
calculation_average_nunbers/: calculation.py
